// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controller should be assigned method.control variable if wrap with FormProvider 1`] = `
<DocumentFragment>
  <input
    name="test"
    value=""
  />
</DocumentFragment>
`;

exports[`Controller should render correctly with as with component 1`] = `
<DocumentFragment>
  <input
    name="test"
    value=""
  />
</DocumentFragment>
`;

exports[`Controller should render correctly with as with string 1`] = `
<DocumentFragment>
  <input
    name="test"
    value=""
  />
</DocumentFragment>
`;

exports[`Controller should support custom value name 1`] = `
<DocumentFragment>
  <input
    value="test"
  />
</DocumentFragment>
`;

exports[`Controller should support default value from hook form 1`] = `
<DocumentFragment>
  <input
    name="test"
    value="data"
  />
</DocumentFragment>
`;
